Improve post-list heading sizes; fix click area gaps in title links

--- a/src/wp-content/themes/tuleva/css/main.css
+++ b/src/wp-content/themes/tuleva/css/main.css
@@ -13136,6 +13136,7 @@ sup {
   margin-bottom: 5px;
 }
 .post-list__item__title a {
+  display: inline-block;
   color: #002f63;
 }
 .post-list__item__meta {
