--- a/src/wp-content/themes/tuleva/scss/_components.scss
+++ b/src/wp-content/themes/tuleva/scss/_components.scss
@@ -646,6 +646,7 @@
         &__title {
             margin-bottom: 5px;
             a {
+                display: inline-block;
                 color: $heading-primary;
             }
         }
